--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
   <a href="https://www.virginmediatv.ie/en/ondcdemand">https://www.virginmediatv.ie/ Wrong On Demand landing page</a><br>
   <a href="https://www.virginmediatv.ie/en/my-vidsfdfeos">https://www.virginmediatv.ie/ Wrong My videos landing page</a><br>
   <a href="https://www.virginmediatv.ie/en/movies-and-boxsets/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/hurricane-season/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/hurricane-season.html">https://www.virginmediatv.ie/en/ movies-and-boxsets item</a><br>
-<a href="https://www.virginmediatv.ie/dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F8f633480-6e73-492f-9bff-fd9e0f181ac8/season/crid:~~2F~~2Fupc.com~~2F7b521e4b-1b43-4d05-ba2b-9a0deeabf908/episode/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMP2009000000383725">https://www.virginmediatv.ie/en/ movies-and-boxsets item-2  s5 e2</a><br>
- <a href="https://www.virginmediatv.ie/dl/ie/ondemand/show/crid:~~2F~~2Fupc.com~~2Fb9316ee3-56b1-47db-b2dc-dc49164cb1aa/season/crid:~~2F~~2Fupc.com~~2Ff6384992-6807-4600-8b32-6e0b5c484b02/episode/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMP2009000000383914">https://www.virginmediatv.ie/en/ On demand item-3  s3 e1</a><br>
+<a href="https://www.virginmediatv.ie/en/myprime/show/crid:~~2F~~2Fupc.com~~2F8f633480-6e73-492f-9bff-fd9e0f181ac8/season/crid:~~2F~~2Fupc.com~~2F7b521e4b-1b43-4d05-ba2b-9a0deeabf908/episode/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMP2009000000383725">https://www.virginmediatv.ie/en/ movies-and-boxsets item-2  s5 e2</a><br>
+ <a href="https://www.virginmediatv.ie/en/ondemand/show/crid:~~2F~~2Fupc.com~~2Fb9316ee3-56b1-47db-b2dc-dc49164cb1aa/season/crid:~~2F~~2Fupc.com~~2Ff6384992-6807-4600-8b32-6e0b5c484b02/episode/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMP2009000000383914">https://www.virginmediatv.ie/en/ On demand item-3  s3 e1</a><br>
   
   
 
