--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
   <a href="https://www.virginmediatv.ie/en">https://www.virginmediatv.ie/Home landing page</a><br>
  <a href="https://www.virginmediatv.ie/en/live-channels">https://www.virginmediatv.ie/ Watch TV landing page</a><br>
   <a href="https://www.virginmediatv.ie/en/tv-guide">https://www.virginmediatv.ie/ TV guide landing page</a><br>
-   <a href="https://www.virginmediatv.ie/en/ondemand">https://www.virginmediatv.ie/ On Demand landing page</a><br>
+   <a href="https://www.virginmediatv.ie/en/ondemand">https://www.virginmediatv.ie/ Movies&Boxes landing page (OnDemand = M&Box sets/Providers</a><br>
   <a href="https://www.virginmediatv.ie/en/my-videos">https://www.virginmediatv.ie/ My videos landing page</a><br>
   <p></p>
   <a href="https://www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/en/M-S Page</a><br>
