--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
   <p></p>
   <a href="https://www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/en/M-S Page</a><br>
   <a href="https://www.virginmediatv.ie/en/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F73196d75-8618-46d5-ab32-e866290d314e/ep-01-banana-in-the-stone/crid%3A~~2F~~2Fupc.com~~2F186071~~2FPACK0000000000808300/ep-01-banana-in-the-stone">virgintv M-S item #1</a><br>
-  <a href="https://www.virginmediatv.ie/en/live-channels/live-channel.html/753737255332/1483610400000">virgintv TV guide item</a><br>
+  <a href="https://www.virginmediatv.ie/en/live-channels/live-channel.html/753737255275/location/6651943228/1488196800000">virgintv TV guide item</a><br>
 
- <a href="https://www.virginmediatv.ie/dl/ie/watchtv/station/753737255297/program/crid:~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-000000004BA0/listing/crid:~~2F~~2Fbds.tv~~2F241083770-imi:00100000004B54D3">virgintv TV guide item-Live</a><br>
- <a href="https://www.virginmediatv.ie/en/watchtv/station/753737255195/program/crid:~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000661F/listing/crid:~~2F~~2Fbds.tv~~2F129272142-imi:00100000004B37BF">virgintv TV guide item-past</a><br>
+ <a href="https://www.virginmediatv.ie/en/live-channels/live-channel.html/753737255209/location/6651943228">virgintv TV guide item-Live</a><br>
+ <a href="https://www.virginmediatv.ie/en/live-channels/live-channel.html/753737255278/location/6651943228/1487591700000">virgintv TV guide item-past</a><br>
   <a href="https://www.virginmediatv.ie/en/ondcdemand">https://www.virginmediatv.ie/ Wrong On Demand landing page</a><br>
   <a href="https://www.virginmediatv.ie/en/my-vidsfdfeos">https://www.virginmediatv.ie/ Wrong My videos landing page</a><br>
   <a href="https://www.virginmediatv.ie/en/movies-and-boxsets/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/hurricane-season/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/hurricane-season.html">https://www.virginmediatv.ie/en/ movies-and-boxsets item</a><br>
