--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>List of useful links to test HZN app</h1>
-        <h4><p>Mobile app proccessed:
-          - Deeplinks
-          - Universal links
-        </p></h4>
+        <h2>List of useful links to test HZN and Branded app linkings</h2>
+        <h5><p>Mobile app proccessed:</h5></p>
+          <h5><p>- Deeplinks</h5></p>
+           <h5><p> - Universal links</h5></p>
           
         <h4>
           1. Universal links:
