--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <div class="wrapper">
       <header>
-        <h2>List of useful links to test HZN and Branded app linkings</h2>
-        <h5><p>Mobile app proccessed:</h5></p>
-          <h5><p>- Deeplinks</h5></p>
-           <h5><p> - Universal links</h5></p>
+        <h3>List of useful links to test HZN and Branded app linkings</h3>
+        <h5><p>Mobile app proccessed:</h5>
+          <br><h5>- Deeplinks</h5><>/br
+           <br><h5>- Universal links</h5></br></p>
           
         <h4>
           1. Universal links:
