--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
       <header>
         <h3>List of useful links to test HZN and Branded app linkings</h3>
         <h5><p>Mobile app proccessed:</h5>
-          <br><h5>- Deeplinks</h5><>/br
+        <br><h5>- Deeplinks</h5></br>
            <br><h5>- Universal links</h5></br></p>
           
-        <h4>
-          1. Universal links:
-A. https://www.horizon.tv/en_ch/tv-guide.html 
+        <h5><p>1. Universal links:
+<br>A. https://www.horizon.tv/en_ch/tv-guide.html</br>
 [Should be opened via the app directly. No any additional technical dialog.
 Deeplinks are mapped on Universal links. It allows to open the app when a link is clicked, rather than driving to a website or to your app’s listing on the iOS App Store or Google Play.
 Technical restrictions?]
