--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <header>
         <h3>List of useful links to test HZN and Branded app linkings</h3>
         <h5><p>Mobile app proccessed:</h5>
-        <br><h5>- Deeplinks</h5></br>
-           <br><h5>- Universal links</h5></br></p>
+        <h5>- Deeplinks</h5>
+         <h5>- Universal links</h5></p>
           
         <h5><p>1. Universal links:
 <br>A. https://www.horizon.tv/en_ch/tv-guide.html</br>
