--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@ Technical restrictions?]
 Need to be tested to check: 
 - Deeplinking is implemented in the app;
 - Deeplinks are mapped on Universal links in right way;
+      <br></br>
 
-<br><h5>B. https://www.horizon.tv/dl/ch/tvguide -Confirm/Redirect link-</h5></br>
+<h5>B. https://www.horizon.tv/dl/ch/tvguide -Confirm/Redirect link-</h5>
       [WEB dialog (“Open via the app/WEB” appears]
 Need to be tested to check: 
 - “Redirect” link process correctly via WEB (WEB dialog);
