--- a/index.html
+++ b/index.html
@@ -24,22 +24,20 @@
 <h5>A. https://www.horizon.tv/en_ch/tv-guide.html</h5>
 [Should be opened via the app directly. No any additional technical dialog.
 Deeplinks are mapped on Universal links. It allows to open the app when a link is clicked, rather than driving to a website or to your app’s listing on the iOS App Store or Google Play.
-Technical restrictions?]
-<h4>Need to be tested to check: 
+<h7>Technical restrictions?]</h7>
+<h6>Need to be tested to check: 
 - Deeplinking is implemented in the app;
-- Deeplinks are mapped on Universal links in right way;</h4>
+- Deeplinks are mapped on Universal links in right way;</h6>
       <br></br>
 <h5>B. https://www.horizon.tv/dl/ch/tvguide -Confirm/Redirect link-</h5>
       [WEB dialog (“Open via the app/WEB” appears]
-<h4>Need to be tested to check: 
+<h6>Need to be tested to check: 
 - “Redirect” link process correctly via WEB (WEB dialog);
-- “Redirect” link process correctly via the app;</h4>
+- “Redirect” link process correctly via the app;</h6>
       <br></br>
-    <br></br>
-    
          <h5>2. Mobile deeplinks:</h5>
 hgo://nl/tvguide [Should be opened via the app directly. No any additional technical dialog]
-<h4>Indirectly Mobile deeplinks can be tested by p.1.</h4>
+<h6>Indirectly Mobile deeplinks can be tested by p.1.</h6>
         
         <p></p>
 
