--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ hgo://nl/tvguide [Should be opened via the app directly. No any additional techn
 <p><a href="hgo://nl/watchtv/station/24443942987/program/crid:~~2F~~2Fbds.tv~~2F40995770/listing/crid:~~2F~~2Fbds.tv~~2F229899112-imi:0010000000808F8F">hgo://nl/ replay item -> should be opened in Ziggo</a></p>
 <p><a href="hgo://nl/tvguide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2Fs37510974/de-wereld-draait-door/crid%3A~~2F~~2Fbds.tv~~2F230140383-imi%3A0010000000808F90/de-wereld-draait-door">hgo://nl/ replay item -> should be opened in Ziggo</a></p>
 
-<h6><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other countries</h6></p>
+<h5><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other countries</h5>
 <p><a href="hgo://at/ondemand/show/crid:~~2F~~2Fupc.com~~2F926b1429-fc6a-4c80-aa68-2abdd5bbbc9f/season/crid:~~2F~~2Fupc.com~~2F66a40b0f-488e-4dae-849c-c2aebf999231/episode/crid:~~2F~~2Fupc.com~~2F2002~~2FBAMP2009000000325300">hgo://at On Demand item -> should be opened in HZN</a></p>
 <p><a href="hgo://ch/myprime/group/crid:~~2F~~2Fupc.com~~2F62e0cc9b-d2f3-496e-b5ff-46cfeac57be1/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000374740">hgo://ch/ My prime item -> should be opened in HZN</a></p>
 <p><a href="hgo://ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000ABD7/3%20auf%20zwei/crid%3A~~2F~~2Fbds.tv~~2F625983816-imi%3A0010000000D47C6E/3%20auf%20zwei">hgo://ch/ Replay item -> should be opened in HZN</a></p>
@@ -208,10 +208,9 @@ hgo://nl/tvguide [Should be opened via the app directly. No any additional techn
   <a href="ziggogo://nl/myvideos">ziggogo://nl/ Myvideos Page</a><br>
 <p></p>
   <p>
-  <h6>Ziggo. Wrong pages</h6>
+  <h5>Ziggo. Wrong pages</h5>
   <a href="ziggogo://nl/hame">Hame Page-incorrect adress</a><br>
   <a href="ziggogo://nl/fjg">fjg Page-incorrect adress</a><br>
-</p>
 
 <h5>Ziggo.</h5>
   <h5>Universal links:</h5>
@@ -261,12 +260,12 @@ hgo://nl/tvguide [Should be opened via the app directly. No any additional techn
   <a href="virgintv://ie/watchtv/station/753737255332/program/crid:~~2F~~2Fbds.tv~~2F482945/listing/crid:~~2F~~2Fbds.tv~~2F482945-imi:001000000046CFA5">virgintv://ie/ TV guide item #2</a><br>
       
 
-</p>
+
 <p>
   <h5>Virgin. Wrong pages</h5>
   <a href="virgintv://ie/hame">virgintv Hame Page-incorrect adress</a><br>
   <a href="virgintv://ie/wotchtv">virgintv wotchtv Page-incorrect adress</a><br>
-</p>
+
 
 <h5>Virgin.</h5>
 <h5>Universal links:</h5>
