--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ hgo://nl/tvguide [Should be opened via the app directly. No any additional techn
 <h5><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing pages</h5>
 <h5><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NL</h5>
 
-<p><a href="hgo://nl/home">hgo://nl/ Home-NL -> should be opened in Ziggo</a></p>
+<h5><a href="hgo://nl/home">hgo://nl/ Home-NL -> should be opened in Ziggo</a></h5>
 <p><a href="hgo://nl/myprime">hgo://nl/ my-prime-NL -> should be opened in Ziggo</a></p>
 <p><a href="hgo://nl/ondemand">hgo://nl/ on demand-NL -> should be opened in Ziggo</a></p>
 <p><a href="hgo://nl/tvguide">hgo://nl/ tv-gids-NL -> should be opened in Ziggo</a></p>
