--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h3><b>List of useful links to test HZN and Branded app linkings</b></h3>
-       <p>Mobile app proccessed:<br>
+        <h4><b>List of useful links to test HZN and Branded app linkings</b></h4>
+       <h5><p>Mobile app proccessed:<br>
         - Universal deeplink<br>
-        - Mobile deeplinks</p>
-          
+        - Mobile deeplinks</p></h5>
+         
 <p><b>1. Universal deeplinks [App Links]</b><br>
 a - Web deeplink - https://www.horizon.tv/en_ch/tv-guide.html {Android 6.0+} {iOs 9+}<br>
 [Open immediately app with intent if installed]<br>
