--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@ Indirectly Mobile deeplinks can be tested by p.1-a
       </header>
       <section>
    
-  <h5><p>HZN. Mobile deeplinks: hgo://nl/...<br>
-
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing pages<br>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NL<br>
+  <h5><p>HZN.<br> HZN. Mobile deeplinks: hgo://nl/...<br>
+Landing pages. NL<br>
 
 <a href="hgo://nl/home">hgo://nl/ Home-NL -> should be opened in Ziggo</a><br>
 <a href="hgo://nl/myprime">hgo://nl/ my-prime-NL -> should be opened in Ziggo</a><br>
@@ -62,7 +60,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="hgo://nl/watchtv">hgo://nl/ tv-kijken-NL -> should be opened in Ziggo</a><br>     
 <a href="hgo://nl">hgo://nl without Home -> should be opened in HZN</a><br>
  
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other countries<br>
+Landing pages. Other countries<br>
 <a href="hgo://ch/home">hgo://ch/home -> should be opened in HZN</a><br> 
 <a href="hgo://ch/myprime">hgo://ch/myprime -> should be opened in HZN</a><br> 
 <a href="hgo://ch/ondemand">hgo://ch/ondemand -> should be opened in Ziggo</a><br>
@@ -71,24 +69,23 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="hgo://ch/watchtv">hgo://ch/watchtv -> should be opened in Ziggo</a><br>    
 <a href="hgo://ch">hgo://ch without Home -> should be opened in HZN</a><br>
       
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Items: VOD and linear<br>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NL<br>
+Items: VOD and linear. NL<br>
 <a href="hgo://nl/myprime/group/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000322501/item/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000322501">hgo://nl/ my-prime item -> should be opened in Ziggo</a><br>
 <a href="hgo://nl/watchtv/station/24443942987/program/crid:~~2F~~2Fbds.tv~~2F40995770/listing/crid:~~2F~~2Fbds.tv~~2F229899112-imi:0010000000808F8F">hgo://nl/ replay item -> should be opened in Ziggo</a><br>
 <a href="hgo://nl/tvguide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2Fs37510974/de-wereld-draait-door/crid%3A~~2F~~2Fbds.tv~~2F230140383-imi%3A0010000000808F90/de-wereld-draait-door">hgo://nl/ replay item -> should be opened in Ziggo</a><br>
 
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other countries<br>
+Items: VOD and Linear. Other countries<br>
 <a href="hgo://at/ondemand/show/crid:~~2F~~2Fupc.com~~2F926b1429-fc6a-4c80-aa68-2abdd5bbbc9f/season/crid:~~2F~~2Fupc.com~~2F66a40b0f-488e-4dae-849c-c2aebf999231/episode/crid:~~2F~~2Fupc.com~~2F2002~~2FBAMP2009000000325300">hgo://at On Demand item -> should be opened in HZN</a><br>
 <a href="hgo://ch/myprime/group/crid:~~2F~~2Fupc.com~~2F62e0cc9b-d2f3-496e-b5ff-46cfeac57be1/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000374740">hgo://ch/ My prime item -> should be opened in HZN</a><br>
 <a href="hgo://ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000ABD7/3%20auf%20zwei/crid%3A~~2F~~2Fbds.tv~~2F625983816-imi%3A0010000000D47C6E/3%20auf%20zwei">hgo://ch/ Replay item -> should be opened in HZN</a><br>
 <a href="hgo://de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord">hgo://de/ Maxdome item -> should be opened in HZN</a></p></h5>
     
-        <h5><p>Universal links:<br>
+        <h5><p><b>HZN. Universal links:</b><br>
         Web deeplinks https://www.horizon.tv/nl_nl.html;><br>
     "Confirm"/"Redirect" links - https://www.horizon.tv/dl/nl/...<br>
 
 
-  <b>"Confirm"/"Redirect" link  https://www.horizon.tv/dl/nl/...</b><br>
+  <b>b - "Confirm"/"Redirect" link HZN https://www.horizon.tv/dl/nl/...</b><br>
 <a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379026">https://www.horizon.tv/dl/nl/ My prime item -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0">https://www.horizon.tv/dl/nl/ My prime item-w/o episode -> should be opened in Ziggo</a><br> 
 <a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d">https://www.horizon.tv/dl/nl// My prime item-w/o episode-w/o season -> should be opened in Ziggo</a><br>   
@@ -100,7 +97,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/dl/ch/watchtv/station/714731047403//location/48323623160">https://{HOSTNAME}/dl/{COUNTRY}/watchtv/station/{STATION_ID}/location/{LOCATION_ID} Live item CH-FR locale</a><br>
 <a href="https://www.horizon.tv/dl/ch/watchtv/station/location/48323623160">https://{HOSTNAME}/dl/{COUNTRY}/watchtv/station/{STATION_ID}/location/{LOCATION_ID} Live item CH-DE locale (not avail fo RF)</a><br>
 
-<b>"Confirm"/"Redirect" links https://www.horizon.tv/dl/OTHER COUNTRIES/...</b><br>
+<b>"Confirm"/"Redirect" OTHER COUNTRIES links https://www.horizon.tv/dl/OTHER COUNTRIES/...</b><br>
 <a href="https://www.horizon.tv/dl/ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000ABD7/3%20auf%20zwei/crid%3A~~2F~~2Fbds.tv~~2F625983816-imi%3A0010000000D47C6E/3%20auf%20zwei">https://www.horizon.tv/dl/ch/ Replay item -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/dl/at/ondemand/show/crid:~~2F~~2Fupc.com~~2F926b1429-fc6a-4c80-aa68-2abdd5bbbc9f/season/crid:~~2F~~2Fupc.com~~2F66a40b0f-488e-4dae-849c-c2aebf999231/episode/crid:~~2F~~2Fupc.com~~2F2002~~2FBAMP2009000000325300">https://www.horizon.tv/dl/at/ On Demand item -> should be opened in HZN</a><br>
 
