--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
    
         <h5><p><b>1. HZN. Universal links:</b><br>
         a - Web deeplinks https://www.horizon.tv/nl_nl.html;><br>
-    b - "Confirm"/"Redirect" links - https://www.horizon.tv/dl/nl/...<br>
+    b - "Confirm"/"Redirect" links - https://www.horizon.tv/dl/nl/...<br></p> 
 
   <b>a - [HZN] Web deeplinks https://www.horizon.tv/nl_nl.html. NL</b><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL -> should be opened in Ziggo</a><br>
