--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         - Universal deeplinks<br>
         - Mobile deeplinks</p></h5>
          
-<h5><p><b>1. Universal deeplinks [App Links]</b><br></p> 
+<h5><p><mark>1. Universal deeplinks [App Links]</mark><br></p> 
 a - Web deeplinks - https://www.horizon.tv/en_ch/tv-guide.html {Android 6.0+} {iOs 9+}<br>
 [Open immediately app with intent if installed]<br>
 [Fall back to web link if not installed]<br>
