--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@ a - Web deeplinks - https://www.horizon.tv/en_ch/tv-guide.html {Android 6.0+} {i
 [Open immediately app with intent if installed]<br>
 [Fall back to web link if not installed]<br>
 
-<b>Need to be tested to check:</b>
+<i>Need to be tested to check:</i>
 - Deeplinking is implemented in the app;<br>
 - Deeplinks are mapped on Universal links in right way;<br></p>
 
 b - "Confirm"/"Redirect" deeplinks https://www.horizon.tv/dl/ch/tvguide<br>
 ["Open with ... WEB/app (if installed)" dialog -> "Open app" / "Fall back to web link if not installed"]<br>
       
-<b>Need to be tested to check:</b><br>
+<i>Need to be tested to check:</i><br>
 - “Redirect” link process correctly via WEB (WEB dialog);<br>
 - “Redirect” link process correctly via the app<br></p> 
 
-<b>2. Mobile deeplinks</b><br>
+<mark>2. Mobile deeplinks</mark><br>
 [Open immediately app with intent if installed]<br>
 hgo://nl/tvguide<br>
 Indirectly Mobile deeplinks can be tested by p.1-a
-  <b>Need to be tested to check:</b><br>
+  <i>Need to be tested to check:</i><br>
 - mobile deeplinks are implemented</p></h5>
      
 <p class="view"><a href="https://github.com/TatsianaVasko">View My GitHub Profile</a></p>
