--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@ Landing pages. NL<br>
 <a href="hgo://nl/myvideos">hgo://nl/ my-videos-NL -> should be opened in Ziggo</a><br>  
 <a href="hgo://nl/watchtv">hgo://nl/ tv-kijken-NL -> should be opened in Ziggo</a><br>     
 <a href="hgo://nl">hgo://nl without Home -> should be opened in HZN</a><br>
+<a href="https://www.horizon.tv/dl/nl/watchtv/station/24443943035">hgo://nl/watchtv/station/24443943035 ->  Full screen player opens, stream starts playing</a><br>
  
 Landing pages. Other countries<br>
 <a href="hgo://ch/home">hgo://ch/home -> should be opened in HZN</a><br> 
