--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@ Landing pages. NL<br>
 <a href="hgo://nl/watchtv">hgo://nl/ tv-kijken-NL -> should be opened in Ziggo</a><br>     
 <a href="hgo://nl">hgo://nl without Home -> should be opened in HZN</a><br>
 <a href="hgo://nl/watchtv/station/24443943035">hgo://nl/watchtv/station/24443943035 ->  Full screen player opens, stream starts playing</a><br>
- 
+<a href="hgo://nl/watchtv/station/672816167173/program/crid:~~2F~~2Fbds.tv~~2F37918996/listing/crid:~~2F~~2Fbds.tv~~2F249437385-imi:0010000000A304E3/location/24443942973"> Replay asset hgo://nl/watchtv/station//program//listing//location/</a><br>
+      
 Landing pages. Other countries<br>
 <a href="hgo://ch/home">hgo://ch/home -> should be opened in HZN</a><br> 
 <a href="hgo://ch/myprime">hgo://ch/myprime -> should be opened in HZN</a><br> 
