--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@ Landing pages. NL<br>
 <a href="hgo://nl">hgo://nl without Home -> should be opened in HZN</a><br>
 <a href="hgo://nl/watchtv/station/24443943035">hgo://nl/watchtv/station/24443943035 ->  Full screen player opens, stream starts playing</a><br>
 <a href="hgo://nl/watchtv/station/672816167173/program/crid:~~2F~~2Fbds.tv~~2F37918996/listing/crid:~~2F~~2Fbds.tv~~2F249437385-imi:0010000000A304E3/location/24443942973"> Replay asset hgo://nl/watchtv/station//program//listing//location/</a><br>
+<a href="hgo://nl/myprime/group/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000695838/item/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000695838">hgo://nl/ Movie asset</a><br>
+   <a href="hgo://nl/myprime/group/crid:~~2F~~2Fupc.com~~2Ff2851a7c-ce4a-470d-99ab-d476a7664782/item/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291930">hgo://nl/ Series asset</a><br>
       
 Landing pages. Other countries<br>
 <a href="hgo://ch/home">hgo://ch/home -> should be opened in HZN</a><br> 
