--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/en_ch/tv-guide.html">https://www.horizon.tv/en_ch/ tv-guide CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/en_ch/my-prime.html">https://www.horizon.tv/en_ch/ my-prime CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/en_ch/my-videos.html">https://www.horizon.tv/en_ch/ my-videos CH -> should be opened in HZN</a><br>
+<a href="https://www.horizon.tv/de_ch/tv-schauen/live-channel.html/27909159218/location/21657126954">https://www.horizon.tv/de_ch/watchtv/station/prog/listing/location CH ->  Full screen player opens, stream starts playing</a><br>
 <a href="https://www.horizon.tv/en_ch/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000381599/flock-the-dunkle-triebe.html">https://www.horizon.tv/en_ch/ my-prime ITEM CH -> should be opened in HZN</a><br>
 
 <a href="https://www.horizon.tv/en_ch/my-prime.html">https://www.horizon.tv/en_ch/ My prime CH -> should be opened in HZN</a></p>
@@ -154,6 +155,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/dl/ch/myvideos">https://www.horizon.tv/dl/ch/myvideos -> should be opened in HZN</a><br>    
 <a href="https://www.horizon.tv/dl/ch/watchtv">https://www.horizon.tv/dl/ch/watchtv -> should be opened in HZN</a><br>     
 <a href="https://www.horizon.tv/dl/ch/">https://www.horizon.tv/dl/ch/ without Home -> should be opened in HZN</a><br>
+<a href="https://www.horizon.tv/dl/ch/watchtv/station/27909159218/program/crid:~~2F~~2Fbds.tv~~2F119008005/listing/crid:~~2F~~2Fbds.tv~~2F653891057-imi:0010000000F160EE/location/21657126954">hgo://nl/watchtv/station/prog/listing/location CH ->  Full screen player opens, stream starts playing</a><br>
 <a href="https://www.horizon.tv/dl/ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F140941133/listing/crid:~~2F~~2Fbds.tv~~2F140941133-imi:0010000000D9F2F5">https://www.horizon.tv/dl/ch/ TV Guide item -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/dl/ch/myprime/group/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000392376/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000392376">https://www.horizon.tv/dl/ch/ My prime item -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/dl/ch/myprime/show/crid:~~2F~~2Fupc.com~~2F5a71c353-c6a0-4b81-bc35-78f9c749b42d/season/crid:~~2F~~2Fupc.com~~2F82eaf379-d47f-4cd5-945c-b00258ba592c/episode/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000388287">https://www.horizon.tv/dl/ch/ My prime item SHOW -> should be opened in HZN</a><br>
