--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/en_ch/my-videos.html">https://www.horizon.tv/en_ch/ my-videos CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/de_ch/tv-schauen/live-channel.html/27909159218/location/21657126954">https://www.horizon.tv/de_ch/watchtv/station/prog/listing/location CH ->  Full screen player opens, stream starts playing</a><br>
 <a href="https://www.horizon.tv/en_ch/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000381599/flock-the-dunkle-triebe.html">https://www.horizon.tv/en_ch/ my-prime ITEM CH -> should be opened in HZN</a><br>
+<a href="https://www.horizon.tv/dl/cz/watchtv/station/546676775251/program/crid:~~2F~~2Fbds.tv~~2F249283399/listing/crid:~~2F~~2Fbds.tv~~2F249283399-imi:0010000000CCB23A/location/667808295264"> https://www.horizon.tv/dl/cz Replay item
 
 <a href="https://www.horizon.tv/en_ch/my-prime.html">https://www.horizon.tv/en_ch/ My prime CH -> should be opened in HZN</a></p>
 <a href="https://www.horizon.tv/en_ch/watch-tv/live-channel.html/541614119263/watch">https://www.horizon.tv/en_ch/ Live channel CH -> should be opened in HZN</a><br>
@@ -161,6 +162,8 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/dl/ch/myprime/show/crid:~~2F~~2Fupc.com~~2F5a71c353-c6a0-4b81-bc35-78f9c749b42d/season/crid:~~2F~~2Fupc.com~~2F82eaf379-d47f-4cd5-945c-b00258ba592c/episode/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000388287">https://www.horizon.tv/dl/ch/ My prime item SHOW -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/dl/ch/myprime/show/crid:~~2F~~2Fupc.com~~2F5a71c353-c6a0-4b81-bc35-78f9c749b42d/season/crid:~~2F~~2Fupc.com~~2F82eaf379-d47f-4cd5-945c-b00258ba592c">https://www.horizon.tv/dl/ch/ My prime item SHOW -epis -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/dl/ch/myprime/show/crid:~~2F~~2Fupc.com~~2F5a71c353-c6a0-4b81-bc35-78f9c749b42d">https://www.horizon.tv/dl/ch/ My prime item SHOW -epis -seas -> should be opened in HZN</a><br>
+
+<a href="https://www.horizon.tv/dl/cz/watchtv/station/546676775251/program/crid:~~2F~~2Fbds.tv~~2F249283399/listing/crid:~~2F~~2Fbds.tv~~2F249283399-imi:0010000000CCB23A/location/667808295264">https://www.horizon.tv/dl/cz/ Replay item</a><br>
              
     <h5><p> <mark>2. HZN. Mobile deeplinks: hgo://nl/... </mark><br>
 Landing pages. NL<br>
