--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/en_ch/my-videos.html">https://www.horizon.tv/en_ch/ my-videos CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/de_ch/tv-schauen/live-channel.html/27909159218/location/21657126954">https://www.horizon.tv/de_ch/watchtv/station/prog/listing/location CH ->  Full screen player opens, stream starts playing</a><br>
 <a href="https://www.horizon.tv/en_ch/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000381599/flock-the-dunkle-triebe.html">https://www.horizon.tv/en_ch/ my-prime ITEM CH -> should be opened in HZN</a><br>
-<a href="https://www.horizon.tv/cs_cz/watch-tv/station/546676775251/program/crid:~~2F~~2Fbds.tv~~2F249283399/listing/crid:~~2F~~2Fbds.tv~~2F249283399-imi:0010000000CCB23A/location/667808295264"> https://www.horizon.tv/dl/cz Replay item</a><br>
-/cs_cz/live-channels/
+<a href="https://www.horizon.tv/cs_cz/live-channels/live-channel.html/546677287056/location/667808295264/1494070500000"> https://www.horizon.tv/dl/cz Replay item</a><br>
+
 <a href="https://www.horizon.tv/en_ch/my-prime.html">https://www.horizon.tv/en_ch/ My prime CH -> should be opened in HZN</a></p>
 <a href="https://www.horizon.tv/en_ch/watch-tv/live-channel.html/541614119263/watch">https://www.horizon.tv/en_ch/ Live channel CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/en_ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F120673537/mein-idol-messi/crid%3A~~2F~~2Fbds.tv~~2F120673537-imi%3A0010000000BE0917/mein-idol-messi.html">https://www.horizon.tv/en_ch/ Replay CH -> should be opened in HZN</a><br>
