--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/nl_nl/tv-gids.html">tv-gids NL -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-videos.html">my-videos NL -> should be opened in Ziggo</a><br> 
 <a href="https://www.horizon.tv/nl_nl/tv-kijken.html">watch tv NL -> should be opened in Ziggo</a><br>   
+<a href="https://www.horizon.tv/nl_nl/tv1111.html">watch tv INCORRECT NL -> should be opened in Ziggo</a><br> 
 <a href="https://www.horizon.tv/nl_nl.html">home NL -> should be opened in Ziggo</a></p>   
+        
 
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942987/watch">Live item NL -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F144523905/wnl-opiniemakers/crid%3A~~2F~~2Fbds.tv~~2F227612161-imi%3A00100000007C921C/wnl-opiniemakers.html">https://www.horizon.tv/nl_nl/ Replay NL -> should be opened in Ziggo</a><br>
@@ -174,7 +176,7 @@ Landing pages. NL<br>
 <a href="hgo://nl/tvguide">hgo://nl/ tv-gids-NL -> should be opened in Ziggo</a><br>
 <a href="hgo://nl/myvideos">hgo://nl/ my-videos-NL -> should be opened in Ziggo</a><br>  
 <a href="hgo://nl/watchtv">hgo://nl/ tv-kijken-NL -> should be opened in Ziggo</a><br>     
-<a href="hgo://nl">hgo://nl without Home -> should be opened in HZN</a><br>
+<a href="hgo://nl">hgo://nl INCORRECT Home -> should be opened in HZN</a><br>
 <a href="hgo://nl/watchtv/station/24443943035">hgo://nl/watchtv/station/24443943035 ->  Full screen player opens, stream starts playing</a><br>
 <a href="hgo://nl/watchtv/station/672816167173/program/crid:~~2F~~2Fbds.tv~~2F37918996/listing/crid:~~2F~~2Fbds.tv~~2F249437385-imi:0010000000A304E3/location/24443942973"> Replay asset hgo://nl/watchtv/station//program//listing//location/</a><br>
 <a href="hgo://nl/myprime/group/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000695838/item/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000695838">hgo://nl/ Movie asset</a><br>
