--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942983/1468941000000/record">https://www.horizon.tv/nl_nl/ RECORDED-ON TV future /record -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000338065/star-wars-the-force-awakens.html/watch-trailer">https://www.horizon.tv/nl_nl/ trailer from ticket -> should be opened in Ziggo</a><br>
-<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347701/lady-in-the-van-the.html/watch-trailer#0">https://www.horizon.tv/nl_nl/ trailer1 from the beginning -> should be opened in Ziggo</a><br>
+<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000338065/star-wars-the-force11111.html"> Movie INCORRECT -> should be opened in Ziggo</a><br>
+        <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347701/lady-in-the-van-the.html/watch-trailer#0">https://www.horizon.tv/nl_nl/ trailer1 from the beginning -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347701/lady-in-the-van-the.html/watch-trailer#57">https://www.horizon.tv/nl_nl/ trailer1 with offset -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000355048/louder-than-bombs.html/watch-trailer#0">https://www.horizon.tv/nl_nl/ trailer2 from the beginning -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000355048/louder-than-bombs.html/watch-trailer#62">https://www.horizon.tv/nl_nl/ trailer2 with offset -> should be opened in Ziggo</a><br>
@@ -180,7 +181,8 @@ Landing pages. NL<br>
 <a href="hgo://nl/watchtv/station/24443943035">hgo://nl/watchtv/station/24443943035 ->  Full screen player opens, stream starts playing</a><br>
 <a href="hgo://nl/watchtv/station/672816167173/program/crid:~~2F~~2Fbds.tv~~2F37918996/listing/crid:~~2F~~2Fbds.tv~~2F249437385-imi:0010000000A304E3/location/24443942973"> Replay asset hgo://nl/watchtv/station//program//listing//location/</a><br>
 <a href="hgo://nl/myprime/group/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000695838/item/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000695838">hgo://nl/ Movie asset</a><br>
-   <a href="hgo://nl/myprime/group/crid:~~2F~~2Fupc.com~~2Ff2851a7c-ce4a-470d-99ab-d476a7664782/item/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291930">hgo://nl/ Series asset</a><br>
+<a href="hgo://nl/myprime/group/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000695838/item/crid:~~2F~~2Fupc.com~~2F371111111111111111111111111111">hgo://nl/ Movie asset INCORRECT</a><br>
+<a href="hgo://nl/myprime/group/crid:~~2F~~2Fupc.com~~2Ff2851a7c-ce4a-470d-99ab-d476a7664782/item/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291930">hgo://nl/ Series asset</a><br>
       
 Landing pages. Other countries<br>
 <a href="hgo://ch/home">hgo://ch/home -> should be opened in HZN</a><br> 
