--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@ Landing pages. NL<br>
 <a href="hgo://nl/myvideos">hgo://nl/ my-videos-NL -> should be opened in Ziggo</a><br>  
 <a href="hgo://nl/watchtv">hgo://nl/ tv-kijken-NL -> should be opened in Ziggo</a><br>     
 <a href="hgo://nl">hgo://nl INCORRECT Home -> should be opened in HZN</a><br>
+<a href="hgo://nl/myprim111">hgo://nl/ my-prime INCORRECT-NL -> should be opened in Ziggo</a><br>
 <a href="hgo://nl/watchtv/station/24443943035">hgo://nl/watchtv/station/24443943035 ->  Full screen player opens, stream starts playing</a><br>
 <a href="hgo://nl/watchtv/station/672816167173/program/crid:~~2F~~2Fbds.tv~~2F37918996/listing/crid:~~2F~~2Fbds.tv~~2F249437385-imi:0010000000A304E3/location/24443942973"> Replay asset hgo://nl/watchtv/station//program//listing//location/</a><br>
 <a href="hgo://nl/myprime/group/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000695838/item/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000695838">hgo://nl/ Movie asset</a><br>
