--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/en_ch/tv-guide.html">https://www.horizon.tv/en_ch/ tv-guide CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/en_ch/my-prime.html">https://www.horizon.tv/en_ch/ my-prime CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/en_ch/my-videos.html">https://www.horizon.tv/en_ch/ my-videos CH -> should be opened in HZN</a><br>
+<a href="https://www.horizon.tv/de_de/ondemand.html">https:// ondemand DE -> should be opened in HZN (M-S/RENT)</a><br>
 <a href="https://www.horizon.tv/de_ch/tv-schauen/live-channel.html/27909159218/location/21657126954">https://www.horizon.tv/de_ch/watchtv/station/prog/listing/location CH ->  Full screen player opens, stream starts playing</a><br>
 <a href="https://www.horizon.tv/en_ch/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000381599/flock-the-dunkle-triebe.html">https://www.horizon.tv/en_ch/ my-prime ITEM CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/cs_cz/live-channels/live-channel.html/546677287056/location/667808295264/1494070500000"> https://www.horizon.tv/dl/cz Replay item</a><br>
@@ -193,6 +194,7 @@ Landing pages. Other countries<br>
 <a href="hgo://ch/myvideos">hgo://ch/myvideos -> should be opened in Ziggo</a><br>  
 <a href="hgo://ch/watchtv">hgo://ch/watchtv -> should be opened in Ziggo</a><br>    
 <a href="hgo://ch">hgo://ch without Home -> should be opened in HZN</a><br>
+<a href="hgo://de/ondemand">hgo:// ondemand DE -> should be opened in HZN (M-S/RENT)</a><br>
       
 Items: VOD and linear. NL<br>
 <a href="hgo://nl/myprime/group/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000322501/item/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000322501">hgo://nl/ my-prime item -> should be opened in Ziggo</a><br>
