--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/dl/ch/myvideos">https://www.horizon.tv/dl/ch/myvideos -> should be opened in HZN</a><br>    
 <a href="https://www.horizon.tv/dl/ch/watchtv">https://www.horizon.tv/dl/ch/watchtv -> should be opened in HZN</a><br>     
 <a href="https://www.horizon.tv/dl/ch/">https://www.horizon.tv/dl/ch/ without Home -> should be opened in HZN</a><br>
+<a href="https://www.horizon.tv/dl/de/ondemand">https:// ondemand DE -> should be opened in HZN</a><br>  
 <a href="https://www.horizon.tv/dl/ch/watchtv/station/581740583441/program/crid:~~2F~~2Fbds.tv~~2F654546986/listing/crid:~~2F~~2Fbds.tv~~2F654546986-imi:0010000000F1609B/location/21657126954">hgo://nl/watchtv/station/prog/listing/location CH ->  Full screen player opens, stream starts playing</a><br>
 <a href="https://www.horizon.tv/dl/ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F140941133/listing/crid:~~2F~~2Fbds.tv~~2F140941133-imi:0010000000D9F2F5">https://www.horizon.tv/dl/ch/ TV Guide item -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/dl/ch/myprime/group/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000392376/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000392376">https://www.horizon.tv/dl/ch/ My prime item -> should be opened in HZN</a><br>
