--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@ Items: VOD and Linear. Other countries<br>
 <a href="hgo://ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000ABD7/3%20auf%20zwei/crid%3A~~2F~~2Fbds.tv~~2F625983816-imi%3A0010000000D47C6E/3%20auf%20zwei">hgo://ch/ Replay item -> should be opened in HZN</a><br>
 <a href="hgo://de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord">hgo://de/ Maxdome item -> should be opened in HZN</a><br>
   
-<a href="hgo://ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F654150454/listing/crid:~~2F~~2Fbds.tv~~2F654150454-imi:0010000000F280D8/location/21656615412">hgo:// location ID</a><br>
-  <a href="hgo://ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F654150454/listing/crid:~~2F~~2Fbds.tv~~2F654150454-imi:0010000000F280D8/location/21656615999">hgo:// location ID wrong for CH</a></p></h5>  
+<a href="hgo://ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F654150454/listing/crid:~~2F~~2Fbds.tv~~2F654150454-imi:0010000000F280D8/location/21656615412">hgo:// Asset with location ID CH</a><br>
+  <a href="hgo://ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F654150454/listing/crid:~~2F~~2Fbds.tv~~2F654150454-imi:0010000000F280D8/location/21656615999">hgo:// Asset with wrong location ID for CH</a></p></h5>  
     
     
 <h5><p> <mark>Ziggo </mark><br>
