--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/en_ch/my-prime.html">https://www.horizon.tv/en_ch/ my-prime CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/en_ch/my-videos.html">https://www.horizon.tv/en_ch/ my-videos CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/de_de/ondemand.html">https:// ondemand DE -> should be opened in HZN (M-S/RENT)</a><br>
-<a href="https://www.horizon.tv/de_ch/tv-schauen/live-channel.html/27909159218/location/21657126954">https://www.horizon.tv/de_ch/watchtv/station/prog/listing/location CH ->  Full screen player opens, stream starts playing</a><br>
+<a href="https://www.horizon.tv/de_ch/tv-schauen/live-channel.html/27909159218/location/21657126954">https://www.horizon.tv/de_ch/watchtv/station/prog/listing/LOCATION ID CH ->  Full screen player opens, stream starts playing</a><br>
+<a href="https://www.horizon.tv/de_ch/tv-schauen/live-channel.html/27909159218/location/21657126999">https://www.horizon.tv/de_ch/watchtv/station/prog/listing/ Wrong LOCATION ID CH ->  Full screen player opens, stream starts playing</a><br>
+
 <a href="https://www.horizon.tv/en_ch/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000381599/flock-the-dunkle-triebe.html">https://www.horizon.tv/en_ch/ my-prime ITEM CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/cs_cz/live-channels/live-channel.html/546677287056/location/667808295264/1494070500000"> https://www.horizon.tv/dl/cz Replay item</a><br>
 
@@ -161,7 +163,10 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/dl/ch/watchtv">https://www.horizon.tv/dl/ch/watchtv -> should be opened in HZN</a><br>     
 <a href="https://www.horizon.tv/dl/ch/">https://www.horizon.tv/dl/ch/ without Home -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/dl/de/ondemand">https:// ondemand DE -> should be opened in HZN</a><br>  
-<a href="https://www.horizon.tv/dl/ch/watchtv/station/581740583441/program/crid:~~2F~~2Fbds.tv~~2F654546986/listing/crid:~~2F~~2Fbds.tv~~2F654546986-imi:0010000000F1609B/location/21657126954">hgo://nl/watchtv/station/prog/listing/location CH ->  Full screen player opens, stream starts playing</a><br>
+<a href="https://www.horizon.tv/dl/ch/watchtv/station/581740583441/program/crid:~~2F~~2Fbds.tv~~2F654546986/listing/crid:~~2F~~2Fbds.tv~~2F654546986-imi:0010000000F1609B/location/21657126954">hgo://nl/watchtv/station/prog/listing/LOCATION ID CH ->  Full screen player opens, stream starts playing</a><br>
+<a href="https://www.horizon.tv/dl/ch/watchtv/station/581740583441/program/crid:~~2F~~2Fbds.tv~~2F654546986/listing/crid:~~2F~~2Fbds.tv~~2F654546986-imi:0010000000F1609B/location/21657126999">hgo://nl/watchtv/station/prog/listing/Wrong LOCATION ID CH ->  Full screen player opens, stream starts playing</a><br>
+
+
 <a href="https://www.horizon.tv/dl/ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F140941133/listing/crid:~~2F~~2Fbds.tv~~2F140941133-imi:0010000000D9F2F5">https://www.horizon.tv/dl/ch/ TV Guide item -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/dl/ch/myprime/group/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000392376/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000392376">https://www.horizon.tv/dl/ch/ My prime item -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/dl/ch/myprime/show/crid:~~2F~~2Fupc.com~~2F5a71c353-c6a0-4b81-bc35-78f9c749b42d/season/crid:~~2F~~2Fupc.com~~2F82eaf379-d47f-4cd5-945c-b00258ba592c/episode/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000388287">https://www.horizon.tv/dl/ch/ My prime item SHOW -> should be opened in HZN</a><br>
@@ -208,8 +213,8 @@ Items: VOD and Linear. Other countries<br>
 <a href="hgo://ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000ABD7/3%20auf%20zwei/crid%3A~~2F~~2Fbds.tv~~2F625983816-imi%3A0010000000D47C6E/3%20auf%20zwei">hgo://ch/ Replay item -> should be opened in HZN</a><br>
 <a href="hgo://de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord">hgo://de/ Maxdome item -> should be opened in HZN</a><br>
   
-<a href="hgo://ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F654150454/listing/crid:~~2F~~2Fbds.tv~~2F654150454-imi:0010000000F280D8/location/21656615412">hgo:// Asset with location ID CH</a><br>
-  <a href="hgo://ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F654150454/listing/crid:~~2F~~2Fbds.tv~~2F654150454-imi:0010000000F280D8/location/21656615999">hgo:// Asset with wrong location ID for CH</a></p></h5>  
+<a href="hgo://ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F654150454/listing/crid:~~2F~~2Fbds.tv~~2F654150454-imi:0010000000F280D8/location/21656615412">hgo:// Asset with LOCATION ID CH</a><br>
+<a href="hgo://ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F654150454/listing/crid:~~2F~~2Fbds.tv~~2F654150454-imi:0010000000F280D8/location/21656615999">hgo:// Asset with wrong LOCATION ID for CH</a></p></h5>  
     
     
 <h5><p> <mark>Ziggo </mark><br>
