--- a/index.html
+++ b/index.html
@@ -138,7 +138,13 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/de_de/myprime.html">https://www.horizon.tv/de_de/myprime DE -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/de_de/maxdome/movie-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000213178/collateral/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000213178/collateral.html">https://www.horizon.tv/de_de/ Maxdome item-2 DE -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/de_de/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">https://www.horizon.tv/de_de/ My prime DE/Survival of the Dead -> should be opened in HZN</a></p> 
-      
+
+   <b>a - [HZN] Web deeplinks https://www.horizon.tv/nl_nl.html. ACTIONABLE URLs</b><br>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other countries<br>
+<a href="https://www.horizon.tv/en_ch/watch-tv/live-channel.html/27909159395/location/21656615443/watch">Actionable URL for live assets</a><br>
+<a href="https://www.horizon.tv/en_ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0108-00000001FFC9/rts-kids/crid%3A~~2F~~2Fbds.tv~~2F656115161-imi%3A0010000000F5AB39/rts-kids/watch#274">Actionable URL for Replay assets</a><br>
+
+
     <b>b - [HZN] "Confirm"/"Redirect" link https://www.horizon.tv/dl/nl/...</b><br>
 <a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379026">https://www.horizon.tv/dl/nl/ My prime item -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0">https://www.horizon.tv/dl/nl/ My prime item-w/o episode -> should be opened in Ziggo</a><br> 
