--- a/index.html
+++ b/index.html
@@ -337,6 +337,14 @@ Wrong pages<br>
 
     
 
+<a><p><h5>Action links for Linear:<br>
+
+<a href="https://www.horizon.tv/de_at/live-channels/live-channel.html/554823719036/location/554823207312/watch">now</a><br>
+<a href="https://www.horizon.tv/de_at/tv-guide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F14680823/two-and-a-half-men/crid%3A~~2F~~2Fbds.tv~~2F5864205-imi%3A00100000017596B9/ich-kann-ihren-skrupel-sehen/watch#349">replay</a><br>
+<a href="https://www.horizon.tv/de_at/live-channels/live-channel.html/554823207407/location/554823207312/record">record</a><br>
+<a href="hgo://at/live-channels/live-channel.html/554823719036/location/554823207312/watch">now</a><br>
+<a href="hgo://at/tv-guide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F14680823/two-and-a-half-men/crid%3A~~2F~~2Fbds.tv~~2F5864205-imi%3A00100000017596B9/ich-kann-ihren-skrupel-sehen/watch#349">replay</a><br>
+<a href="hgo://at/live-channels/live-channel.html/554823207407/location/554823207312/record">record</a><br></p></h5>
   
  
   
