--- a/index.html
+++ b/index.html
@@ -348,6 +348,10 @@ Wrong pages<br>
 <a href="https://www.horizon.tv/en_ch/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000371964/vielleicht-vielleicht-auch-nicht-hd/watch#1202">movie watch CH</a><br>
  <a href="https://www.horizon.tv/de_at/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F2002~~2FATPK2009000000418066/dirty-office-party-hd/watch-trailer#13">watch-trailer AT</a><br>
   <a href="https://www.horizon.tv/de_at/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F2002~~2FATPK2009000000418066/dirty-office-party-hd/add-to-watchlist">add-to-watchlist AT</a><br></p></h5>
+  
+  <a href="hgo://ch//my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000371964/vielleicht-vielleicht-auch-nicht-hd/watch#1202">movie watch CH</a><br>
+ <a href="hgo://at/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F2002~~2FATPK2009000000418066/dirty-office-party-hd/watch-trailer#13">watch-trailer AT</a><br>
+  <a href="hgo://at/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F2002~~2FATPK2009000000418066/dirty-office-party-hd/add-to-watchlist">add-to-watchlist AT</a><br></p></h5>
                                                                                                           
   
  
