--- a/index.html
+++ b/index.html
@@ -337,12 +337,12 @@ Wrong pages<br>
 
     
    <mark>2. [VMUK] Mobile Deeplinking hgouk://gb/... </mark><br>
-   <a href="hgouk://gb/home">virgintv://ie/ Home Page NL</a><br>
-  <a href="hgouk://gb/tvguide">virgintv://ie/ TV-Guide Page</a><br>
-  <a href="hgouk://gb/watchtv">virgintv://ie/ WatchTV Page</a><br>
-  <a href="hgouk://gb/myprime">virgintv://ie/ Myprime Page</a><br>
-  <a href="hgouk://gb/ondemand">virgintv://ie/ Ondemand Page</a><br>
-  <a href="hgouk://gb/myvideos">virgintv://ie/ Myvideos Page</a><br>                                  
+   <a href="hgouk://gb/home">hgouk://gb/ Home Page NL</a><br>
+  <a href="hgouk://gb/tvguide">hgouk://gb/ TV-Guide Page</a><br>
+  <a href="hgouk://gb/watchtv">hgouk://gb/ WatchTV Page</a><br>
+  <a href="hgouk://gb/myprime">hgouk://gb/ Myprime Page</a><br>
+  <a href="hgouk://gb/ondemand">hgouk://gb/ Ondemand Page</a><br>
+  <a href="hgouk://gb/myvideos">hgouk://gb/ Myvideos Page</a><br>                                  
   
   TV ASSETS<br>                             
   <a href="hgouk://gb/watchtv/station/lgilabs-gb-vmlabd-master:13a39d90a544abb92243a1aa2db7c3433c74788031ae81752ecf079085eb24a5/program/crid://virginmedia.com/content/SH012857740000/listing/crid:~~2F~~2Fvirginmedia.com~~2Fcontent~~2FSH012857740000/location/65535">VMUK TV asset</a><br>                                   
