--- a/index.html
+++ b/index.html
@@ -370,12 +370,12 @@ Wrong pages<br>
 <b>"Confirm"/"Redirect" links - http://www.virgintvgo.virginmedia.com/dl/gb/...</b><br>
                        
 <p><a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: Home)
-<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/watch-tv.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: Now on TV)
-<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/tv-guide.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: TV Guide)
-<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/on-demand.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: On Demand) This page includes landing view, filter per categories (kids, movies, series etc…), filter per genres, filter per providers
-<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/my-videos.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: My Videos)
-<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/my-videos/continue-watching.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: Continue Watching)
-<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/my-videos/watchlist.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: Watch list)<br></p>
+<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/watchtv.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: Now on TV)
+<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/tvguide.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: TV Guide)
+<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/ondemand.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: On Demand) This page includes landing view, filter per categories (kids, movies, series etc…), filter per genres, filter per providers
+<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/myvideos.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: My Videos)
+<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/myvideos/continue-watching.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: Continue Watching)
+<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/myvideos/watchlist.html"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: Watch list)<br></p>
 
 <a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/watchtv/station/lgilabs-gb-vmlabd-master:a7847dba88765f416ee9ac93ef12eaaad70f743f700d46e32431f63c4f12170c/program/crid://virginmedia.com/content/SH024206600000/listing/crid:~~2F~~2Fvirginmedia.com~~2Fcontent~~2FEPSH024206600000-imi:71a8f8da33255c924dbd2de89192fb686e6f4f11fdc72464c584f278afadb768/location/65535">VMUK TV asset live</a><br>                                   
 <a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/watchtv/station/lgilabs-gb-vmlabd-master:9d6891593b6dd14a0ac6ac4d9953bb502c35b8feffeb0beeb78cce9ac87651bb/program/crid://virginmedia.com/content/SH012687730000/listing/crid:~~2F~~2Fvirginmedia.com~~2Fcontent~~2FEP012687730288-imi:67e8d158f3df1e9e1c4c28ed901e2687c2f6872c7f74f1f2fd24c9e5522f2b84/location/65535">VMUK TV asset future</a><br></p></h5>                                   
